deploy: 75d7e0555e4993d021f212b6a9297ff04a937fc3

--- a/master/print.html
+++ b/master/print.html
@@ -210,7 +210,7 @@ via the <code>HELIX_RUNTIME</code> environment variable.</p>
 </tbody></table>
 </div>
 <p>Starting with Windows Vista you can also create symbolic links on Windows. Note that this requires
-elevated priviliges - i.e. PowerShell or Cmd must be run as administrator.</p>
+elevated privileges - i.e. PowerShell or Cmd must be run as administrator.</p>
 <p><strong>PowerShell:</strong></p>
 <pre><code class="language-powershell">New-Item -ItemType SymbolicLink -Target &quot;runtime&quot; -Path &quot;$Env:AppData\helix\runtime&quot;
 </code></pre>
