--- a/master/print.html
+++ b/master/print.html
@@ -206,7 +206,7 @@ via the <code>HELIX_RUNTIME</code> environment variable.</p>
 <div class="table-wrapper"><table><thead><tr><th>OS</th><th>Command</th></tr></thead><tbody>
 <tr><td>Windows (Cmd)</td><td><code>xcopy /e /i runtime %AppData%\helix\runtime</code></td></tr>
 <tr><td>Windows (PowerShell)</td><td><code>xcopy /e /i runtime $Env:AppData\helix\runtime</code></td></tr>
-<tr><td>Linux / MacOS</td><td><code>ln -s $PWD/runtime ~/.config/helix/runtime</code></td></tr>
+<tr><td>Linux / macOS</td><td><code>ln -s $PWD/runtime ~/.config/helix/runtime</code></td></tr>
 </tbody></table>
 </div>
 <p>Starting with Windows Vista you can also create symbolic links on Windows. Note that this requires
